// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render \`leak\` view correctly 1`] = `
<div>
  <Connect(FavoriteFilter)
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <div
    className="projects-facets-header clearfix"
  >
    <h3>
      filters
    </h3>
  </div>
  <QualityGateFilter
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <React.Fragment>
    <NewReliabilityFilter
      onQueryChange={[Function]}
      query={
        Object {
          "view": "leak",
        }
      }
    />
    <NewSecurityFilter
      onQueryChange={[Function]}
      query={
        Object {
          "view": "leak",
        }
      }
    />
    <NewMaintainabilityFilter
      onQueryChange={[Function]}
      query={
        Object {
          "view": "leak",
        }
      }
    />
    <NewCoverageFilter
      onQueryChange={[Function]}
      query={
        Object {
          "view": "leak",
        }
      }
    />
    <NewDuplicationsFilter
      onQueryChange={[Function]}
      query={
        Object {
          "view": "leak",
        }
      }
    />
    <NewLinesFilter
      onQueryChange={[Function]}
      query={
        Object {
          "view": "leak",
        }
      }
    />
  </React.Fragment>
  <Connect(LanguagesFilter)
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <TagsFilter
    onQueryChange={[Function]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <Connect(FavoriteFilter) />
  <div
    className="projects-facets-header clearfix"
  >
    <ClearAll
      onClearAll={[Function]}
    />
    <h3>
      filters
    </h3>
  </div>
  <QualityGateFilter
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <React.Fragment>
    <ReliabilityFilter
      onQueryChange={[Function]}
      query={
        Object {
          "size": "3",
        }
      }
    />
    <SecurityFilter
      onQueryChange={[Function]}
      query={
        Object {
          "size": "3",
        }
      }
    />
    <MaintainabilityFilter
      onQueryChange={[Function]}
      query={
        Object {
          "size": "3",
        }
      }
    />
    <CoverageFilter
      onQueryChange={[Function]}
      query={
        Object {
          "size": "3",
        }
      }
    />
    <DuplicationsFilter
      onQueryChange={[Function]}
      query={
        Object {
          "size": "3",
        }
      }
    />
    <SizeFilter
      onQueryChange={[Function]}
      query={
        Object {
          "size": "3",
        }
      }
      value="3"
    />
  </React.Fragment>
  <Connect(LanguagesFilter)
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <TagsFilter
    onQueryChange={[Function]}
    query={
      Object {
        "size": "3",
      }
    }
  />
</div>
`;
